--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>Pasteles de la Osa</title>
   
-  <link rel="stylesheet" href="css/app.css"/>
+  
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
   <div class="container-narrow">
@@ -25,6 +26,8 @@
 
   </div>
 
+  <script src="lib/jquery/jquery-1.8.3.min.js"></script>
+  <script src="lib/bootstrap/bootstrap-carousel.min.js"></script>
   <script src="lib/angular/angular.min.js"></script>
   <script src="js/app.js"></script>
 </body>
