--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <![endif]-->
 
   <script src="lib/jquery/jquery-1.8.3.min.js"></script>
-  <script src="lib/bootstrap/bootstrap-carousel.min.js"></script>
+  <script src="lib/bootstrap/bootstrap.min.js"></script>
   <script src="lib/angular/angular.min.js"></script>
   <script src="js/app.js"></script>
 </body>
