--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <title>Pasteles de la Osa</title>
   
-  
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice"/>
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
@@ -19,7 +19,7 @@
         <li ng-class="navClass('galeria')"><a href="#/galeria">Galería</a></li>
         <li ng-class="navClass('contacto')"><a href="#/contacto">Contacto</a></li>
       </ul>
-      <h3>Pasteles de la Osa</h3>
+      <h1>Pasteles de la Osa</h1>
     </div>
 
     <hr>
