Responsive meta tag added.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Acá encontrarás diversidad de tortas, tartas y budines dulces, ideales para acompañar el té, el café, o el mate en cumpleaños, reuniones o con amigos." />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Pasteles de la Osa</title>
   
