--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice"/>
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/app.css"/>
+
+  <link rel="shortcut icon" href="favicon.png">
 </head>
 <body>
   <div class="container-narrow">
