--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="shortcut icon" href="favicon.png">
 </head>
 <body>
+
+  <img src="logo.jpg" width="180" style="position:relative; float:left;" alt="Pasteles de la Osa logo"/>
+
   <div class="container-narrow">
 
     <div class="masthead">
