--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <body>
   <div class="container-narrow">
 
-    <img src="header.jpg" width="900" height="330" alt="Pasteles de la Osa"/>
+    <img src="header.jpg" width="900" height="276" alt="Pasteles de la Osa"/>
 
-    <ul class="nav-pills" style="list-style-type: none; margin-top:15px; margin-bottom: 50px; color: Brown;" ng-controller="NavCtrl">
+    <ul class="nav-pills" style="list-style-type: none; margin-top:15px; margin-bottom: 50px; color: rgb(155, 65, 31);" ng-controller="NavCtrl">
       <li ng-class="navClass('home')"><a href="#/home"><i class="icon-home"></i> Home</a></li>
       <li ng-class="navClass('pasteleria')"><a href="#/pasteleria"><i class="icon-camera"></i> Pastelería</a></li>
       <li ng-class="navClass('mini_pasteleria')"><a href="#/mini_pasteleria"><i class="icon-camera"></i> Mini Pastelería</a></li>
